applications/whoami/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-https
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
  hostnames:
    - whoami.internal.vw-ops.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: whoami
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-redirect
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
    sectionName: http
  hostnames:
  - whoami.internal.vw-ops.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
